[gd_scene load_steps=4 format=3 uid="uid://bjuiv0xcg4ee6"]

[ext_resource type="Script" uid="uid://coiyyrgxo1gvr" path="res://ui/game_ui/game_ui.gd" id="1_5rq5h"]
[ext_resource type="Theme" uid="uid://bf70rbohgna56" path="res://base_theme.tres" id="1_6u1yh"]
[ext_resource type="Script" uid="uid://dkm184vllh04q" path="res://ui/ui_audio_player/ui_audio_player.gd" id="3_xlhta"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_6u1yh")
script = ExtResource("1_5rq5h")

[node name="UIAudioPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource("3_xlhta")
metadata/_custom_type_script = "uid://dkm184vllh04q"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 16

[node name="label_score" type="Label" parent="VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "0"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="button_back" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "BACK"

[node name="button_restart" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "RESTART"

[node name="ui_end_screen" type="Control" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ui_end_screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="label_game_over" type="Label" parent="VBoxContainer/ui_end_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"
